--- a/client/app/core/client/client-details/client-details.component.html
+++ b/client/app/core/client/client-details/client-details.component.html
@@ -6,18 +6,18 @@
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbox">
         <div class="btn-group" role="group" aria-label="New">
-          <button type="button" class="btn btn-white" [routerLink]="['/clients']">
+          <button type="button" class="btn btn-white" (click)="navigateList()">
             <span class="fa fa-arrow-left"></span> Back
           </button>
         </div>
         <div class="btn-group " role="group" aria-label="">
-          <button type="button" class="btn btn-white" (click)="viewDetails()">
+          <button type="button" class="btn btn-white" (click)="navigateEdit()">
             <span class="fa fa-pencil"></span>
           </button>
           <button type="button" class="btn btn-white" (click)="viewDetails()">
             <span class="fa fa-copy"></span>
           </button>
-          <button type="button" class="btn btn-white" (click)="viewDetails()">
+          <button type="button" class="btn btn-white" (click)="deleteClient()">
             <span class="fa fa-times"></span>
           </button>
         </div>
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
           <label class="col-sm-4">Nick Name</label>
-          <label class="col-sm-8">{{client._id}}</label>
+          <label class="col-sm-8">{{client.nickName}}</label>
         </div>
         <div class="form-group">
           <label class="col-sm-4">Address </label>
