--- a/client/app/core/client/client-editor/client-editor.component.html
+++ b/client/app/core/client/client-editor/client-editor.component.html
@@ -5,8 +5,8 @@
     </h2>
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-group" role="group" aria-label="toolbox">
-        <button type="button" class="btn btn-white" [routerLink]="['/clients']" >
-          <span class="fa fa-arrow-left"> Back</span>
+        <button type="button" class="btn btn-white" (click)="navigateList()" >
+          <span class="fa fa-arrow-left"></span> Back
         </button>
       </div>
     </div>
@@ -50,6 +50,12 @@
             <label class="control-label" for="city">City</label>
             <input type="text" id="city"
                    formControlName="city"
+                   class="form-control">
+          </div>
+          <div class="form-group">
+            <label class="control-label" for="pincode">Pincode</label>
+            <input type="text" id="pincode"
+                   formControlName="pincode"
                    class="form-control">
           </div>
           <div class="form-group">
