--- a/client/app/core/client/client-listing/client-listing.component.html
+++ b/client/app/core/client/client-listing/client-listing.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-7">
+<div class="col-lg-7" *ngIf="loaded">
   <div class="mail-box-header">
     <h2>
       Clients
@@ -6,7 +6,7 @@
     <div class="mail-tools tooltip-demo m-t-md">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbox">
         <div class="btn-group" role="group" aria-label="New">
-          <button type="button" class="btn btn-white">New</button>
+          <button type="button" class="btn btn-white" (click)="navigateCreate()">New</button>
         </div>
         <div class="btn-group " role="group" aria-label="">
           <button type="button" class="btn btn-white" (click)="navigateView()">
@@ -15,10 +15,10 @@
           <button type="button" class="btn btn-white" (click)="navigateEdit()">
             <span class="fa fa-pencil"></span>
           </button>
-          <button type="button" class="btn btn-white" (click)="viewDetails()">
+          <button type="button" class="btn btn-white">
             <span class="fa fa-copy"></span>
           </button>
-          <button type="button" class="btn btn-white" (click)="viewDetails()">
+          <button type="button" class="btn btn-white" (click)="deleteClient()">
             <span class="fa fa-times"></span>
           </button>
         </div>
@@ -41,9 +41,9 @@
       </thead>
       <tbody>
       <tr *ngFor="let client of clientList"
-          (click)="activeClient = client"
+          (click)="clientService.activeClient = client"
           (dblclick)="navigateView()"
-          [ngClass]="{active: client == activeClient}">
+          [ngClass]="{active: client._id === clientService.activeClient._id}">
         <td>{{client.name}}</td>
         <td>{{client.phone}}</td>
         <td>{{client.email}}</td>
